# Morph

./: .travis.yml  Dockerfile  build.sh  conanfile.py  docker-build.sh  meson.build  renderdoc-start
glsl/: color.glslf  color.glslv
python/app/: morph.py
python/morph/gl/: __init__.py
python/morph/ui/: __init__.py
python/platform/: __init__.py
python/test/: nodestorage_test.py  test_nodestorage.py
python/ui/: createnodedialog.py  grapheditor.py  outputviewer.py  removenodedialog.py  stateviewer.py  uimanager.py  window.py
scripts/generatesubproject/: generatesubproject.py  meson.build.template
src/: meson.build
src/base/: format.h  meson.build  observable.cpp  observable.h  registry.h  taskqueue.cpp  taskqueue.h
src/base/immutable/: map.h
src/base/immutable/detail/: bits.h  iterator.h  node.h  operations.h
src/computeengine/: computeengine.cpp  computeengine.h  computeenginetypes.h  computegraph.cpp  computegraph.h  computetask.cpp  computetask.h  computetaskdagbuilder.cpp  computetaskdagbuilder.h  meson.build
src/core/: attribute.cpp  attribute.h  core.cpp  core.h  coretypes.h  dict.cpp  dict.h  enabledispatch.cpp  enabledispatch.h  knob.cpp  knob.h  knobschema.cpp  knobschema.h  logger.cpp  logger.h  meson.build  node.cpp  node.h  nodefactory.h  nodestorage.cpp  nodestorage.h  nodestorageactions.h  nodestoragetypes.h  operations.cpp  operations.h  pluginmanager.cpp  pluginmanager.h  value.cpp  value.h  valuetype.cpp  valuetype.h
src/core/value/: defaultvalues.cpp  defaultvalues.h  value.cpp  value.h  valuetype.cpp  valuetype.h
src/foundation/: format.h  meson.build  observable.cpp  observable.h  registry.h  taskqueue.cpp  taskqueue.h
src/foundation/immutable/: map.h
src/foundation/immutable/detail/: allocation.h  array.h  bits.h  iterator.h  node.h  operations.h  refcounted.h
src/gl/: gl.cpp  gl.h  meson.build  renderer.cpp  renderer.h  shader.cpp  shader.h
src/platform/: attribute.cpp  attribute.h  computeengine.cpp  computeengine.h  enabledispatch.cpp  enabledispatch.h  knob.cpp  knob.h  knobmodelregistry.cpp  knobmodelregistry.h  knobsbuilder.cpp  knobsbuilder.h  knobschema.cpp  knobschema.h  logger.cpp  logger.h  meson.build  node.cpp  node.h  nodefactory.h  nodefactoryregistry.cpp  nodestorage.cpp  nodestorage.h  nodestorageactions.h  nodestoragetypes.h  operations.cpp  operations.h  platformcore.cpp  platformcore.h  platformcoretypes.h  pluginmanager.cpp  pluginmanager.h  value.cpp  value.h  valuetype.cpp  valuetype.h
src/platform/nodestorageoperations/: knoboperations.h
src/python/: meson.build
src/python/base/: bindimmutable.cpp  bindimmutablemap.h
src/python/computeengine/: module.cpp
src/python/core/: bindcore.cpp  bindcore.h  binddict.cpp  bindlogger.cpp  bindnode.cpp  bindnodefactory.cpp  bindnodestorage.cpp  bindpluginmanager.cpp  loggeradapter.h  module.cpp  nodestorageadapter.h  pynode.h  pynodefactory.h  pythondictconversion.cpp  pythondictconversion.h
src/python/foundation/: bindimmutablemap.h  pymap.h
src/python/gl/: module.cpp
src/python/platform/: bindlogger.cpp  bindnode.cpp  bindnodefactory.cpp  bindnodestorage.cpp  bindplatform.h  bindplatformcore.cpp  bindpluginmanager.cpp  loggeradapter.h  module.cpp  nodestorageadapter.h  nodestorageadaptor.h  pynode.h  pynodefactory.h  pythondictconversion.cpp  pythondictconversion.h  pythondictconversion.inl  pythonnode.cpp  pythonnode.h
src/python/ui/: module.cpp
src/test/: immutabletest.cpp  loggertest.cpp  meson.build  taskqueuetest.cpp
src/ui/: application.cpp  application.h  camera.h  component.h  meson.build  orthocamera.cpp  orthocamera.h  rendertree.h  uitypes.h  viewport.cpp  viewport.h  window.cpp  window.h  windowmanager.cpp  windowmanager.h
